[package]
name = "cell_r"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.1"
gio = "0.9.0"
cairo-rs = {version = "0.9.0", features = ["png"]}

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22_29"]
